--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-3" data-rv-view="25">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-3" data-rv-view="22">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background mbr-after-navbar" id="form1-h" data-rv-view="101" style="background-image: url(assets/images/img-20171214-wa0019-920x920.jpg);">
+<section class="engine"><a href="https://mobirise.co/d">web page software</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background mbr-after-navbar" id="form1-h" data-rv-view="24" style="background-image: url(assets/images/img-20171214-wa0019-920x920.jpg);">
     
     <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -56,7 +56,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
-                            <input type="hidden" value="7K5pzbFX3MkKZtRqZ0i0Pjxfj2kHPGZ6wS/bzT3H5ouvChWDW1yc0fEBUh8C9x96R4jS/E9ksZBQ6xYOr9GXWo2RnOekHpeh4PPXhg8Uye+K3E6m6z2dJLXV4+n+Bm1+" data-form-email="true">
+                            <input type="hidden" value="1aqoFCu7UogzoeOqstSTL+BnUfsEz5Nb4DCxgFBo+ws30OCgK2ALN0vM2hLb70fCPfFQo181ch0DXiMt9V781eJAuY/USIVRnxw4+jY/Mm65AYn1D48ZiWGg1jZuywI6" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
